tests-snapshots/dbc-cantools/issue_184_extended_mux_independent_multiplexors_dumped.snap.stderr
error[E0412]: cannot find type `ExtMuxIndepMultiplexorsMuxAIndex` in this scope
   --> tests-snapshots/dbc-cantools/issue_184_extended_mux_independent_multiplexors_dumped.snap.rs:210:39
    |
210 |     pub fn mux_a(&mut self) -> Result<ExtMuxIndepMultiplexorsMuxAIndex, CanError> {
    |                                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
...
345 | pub enum ExtMuxIndepMultiplexorsMuxBIndex {
    | ----------------------------------------- similarly named enum `ExtMuxIndepMultiplexorsMuxBIndex` defined here
    |
help: an enum with a similar name exists
    |
210 -     pub fn mux_a(&mut self) -> Result<ExtMuxIndepMultiplexorsMuxAIndex, CanError> {
210 +     pub fn mux_a(&mut self) -> Result<ExtMuxIndepMultiplexorsMuxBIndex, CanError> {
    |
help: you might be missing a type parameter
    |
 67 | impl<ExtMuxIndepMultiplexorsMuxAIndex> ExtMuxIndepMultiplexors {
    |     ++++++++++++++++++++++++++++++++++

error[E0422]: cannot find struct, variant or union type `ExtMuxIndepMultiplexorsMuxAM0` in this scope
   --> tests-snapshots/dbc-cantools/issue_184_extended_mux_independent_multiplexors_dumped.snap.rs:214:58
    |
214 |                     ExtMuxIndepMultiplexorsMuxAIndex::M0(ExtMuxIndepMultiplexorsMuxAM0 {
    |                                                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ help: a struct with a similar name exists: `ExtMuxIndepMultiplexorsMuxBM0`
...
360 | pub struct ExtMuxIndepMultiplexorsMuxBM0 {
    | ---------------------------------------- similarly named struct `ExtMuxIndepMultiplexorsMuxBM0` defined here

error[E0422]: cannot find struct, variant or union type `ExtMuxIndepMultiplexorsMuxAM1` in this scope
   --> tests-snapshots/dbc-cantools/issue_184_extended_mux_independent_multiplexors_dumped.snap.rs:221:58
    |
221 |                     ExtMuxIndepMultiplexorsMuxAIndex::M1(ExtMuxIndepMultiplexorsMuxAM1 {
    |                                                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ help: a struct with a similar name exists: `ExtMuxIndepMultiplexorsMuxBM1`
...
431 | pub struct ExtMuxIndepMultiplexorsMuxBM1 {
    | ---------------------------------------- similarly named struct `ExtMuxIndepMultiplexorsMuxBM1` defined here

error[E0422]: cannot find struct, variant or union type `ExtMuxIndepMultiplexorsMuxAM2` in this scope
   --> tests-snapshots/dbc-cantools/issue_184_extended_mux_independent_multiplexors_dumped.snap.rs:228:58
    |
228 |                     ExtMuxIndepMultiplexorsMuxAIndex::M2(ExtMuxIndepMultiplexorsMuxAM2 {
    |                                                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ help: a struct with a similar name exists: `ExtMuxIndepMultiplexorsMuxBM2`
...
546 | pub struct ExtMuxIndepMultiplexorsMuxBM2 {
    | ---------------------------------------- similarly named struct `ExtMuxIndepMultiplexorsMuxBM2` defined here

error[E0412]: cannot find type `ExtMuxIndepMultiplexorsMuxAM0` in this scope
   --> tests-snapshots/dbc-cantools/issue_184_extended_mux_independent_multiplexors_dumped.snap.rs:264:16
    |
264 |         value: ExtMuxIndepMultiplexorsMuxAM0,
    |                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ help: a struct with a similar name exists: `ExtMuxIndepMultiplexorsMuxBM0`
...
360 | pub struct ExtMuxIndepMultiplexorsMuxBM0 {
    | ---------------------------------------- similarly named struct `ExtMuxIndepMultiplexorsMuxBM0` defined here

error[E0412]: cannot find type `ExtMuxIndepMultiplexorsMuxAM1` in this scope
   --> tests-snapshots/dbc-cantools/issue_184_extended_mux_independent_multiplexors_dumped.snap.rs:276:16
    |
276 |         value: ExtMuxIndepMultiplexorsMuxAM1,
    |                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ help: a struct with a similar name exists: `ExtMuxIndepMultiplexorsMuxBM1`
...
431 | pub struct ExtMuxIndepMultiplexorsMuxBM1 {
    | ---------------------------------------- similarly named struct `ExtMuxIndepMultiplexorsMuxBM1` defined here

error[E0412]: cannot find type `ExtMuxIndepMultiplexorsMuxAM2` in this scope
   --> tests-snapshots/dbc-cantools/issue_184_extended_mux_independent_multiplexors_dumped.snap.rs:288:16
    |
288 |         value: ExtMuxIndepMultiplexorsMuxAM2,
    |                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ help: a struct with a similar name exists: `ExtMuxIndepMultiplexorsMuxBM2`
...
546 | pub struct ExtMuxIndepMultiplexorsMuxBM2 {
    | ---------------------------------------- similarly named struct `ExtMuxIndepMultiplexorsMuxBM2` defined here

error[E0592]: duplicate definitions with name `set_m0`
   --> tests-snapshots/dbc-cantools/issue_184_extended_mux_independent_multiplexors_dumped.snap.rs:262:5
    |
161 | /     pub fn set_m0(
162 | |         &mut self,
163 | |         value: ExtMuxIndepMultiplexorsMuxBM0,
164 | |     ) -> Result<(), CanError> {
    | |_____________________________- other definition for `set_m0`
...
262 | /     pub fn set_m0(
263 | |         &mut self,
264 | |         value: ExtMuxIndepMultiplexorsMuxAM0,
265 | |     ) -> Result<(), CanError> {
    | |_____________________________^ duplicate definitions for `set_m0`

error[E0592]: duplicate definitions with name `set_m1`
   --> tests-snapshots/dbc-cantools/issue_184_extended_mux_independent_multiplexors_dumped.snap.rs:274:5
    |
173 | /     pub fn set_m1(
174 | |         &mut self,
175 | |         value: ExtMuxIndepMultiplexorsMuxBM1,
176 | |     ) -> Result<(), CanError> {
    | |_____________________________- other definition for `set_m1`
...
274 | /     pub fn set_m1(
275 | |         &mut self,
276 | |         value: ExtMuxIndepMultiplexorsMuxAM1,
277 | |     ) -> Result<(), CanError> {
    | |_____________________________^ duplicate definitions for `set_m1`

error[E0592]: duplicate definitions with name `set_m2`
   --> tests-snapshots/dbc-cantools/issue_184_extended_mux_independent_multiplexors_dumped.snap.rs:286:5
    |
185 | /     pub fn set_m2(
186 | |         &mut self,
187 | |         value: ExtMuxIndepMultiplexorsMuxBM2,
188 | |     ) -> Result<(), CanError> {
    | |_____________________________- other definition for `set_m2`
...
286 | /     pub fn set_m2(
287 | |         &mut self,
288 | |         value: ExtMuxIndepMultiplexorsMuxAM2,
289 | |     ) -> Result<(), CanError> {
    | |_____________________________^ duplicate definitions for `set_m2`

error[E0277]: the trait bound `u16: From<i8>` is not satisfied
   --> tests-snapshots/dbc-cantools/issue_184_extended_mux_independent_multiplexors_dumped.snap.rs:135:46
    |
135 |                     multiplexor: multiplexor.into(),
    |                                              ^^^^ the trait `From<i8>` is not implemented for `u16`
    |
    = help: the following other types implement trait `From<T>`:
              `u16` implements `From<Char>`
              `u16` implements `From<bool>`
              `u16` implements `From<u8>`
    = note: required for `i8` to implement `Into<u16>`

error[E0433]: failed to resolve: use of undeclared type `ExtMuxIndepMultiplexorsMuxAIndex`
   --> tests-snapshots/dbc-cantools/issue_184_extended_mux_independent_multiplexors_dumped.snap.rs:214:21
    |
214 |                     ExtMuxIndepMultiplexorsMuxAIndex::M0(ExtMuxIndepMultiplexorsMuxAM0 {
    |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    |                     |
    |                     use of undeclared type `ExtMuxIndepMultiplexorsMuxAIndex`
    |                     help: an enum with a similar name exists: `ExtMuxIndepMultiplexorsMuxBIndex`

error[E0433]: failed to resolve: use of undeclared type `ExtMuxIndepMultiplexorsMuxAIndex`
   --> tests-snapshots/dbc-cantools/issue_184_extended_mux_independent_multiplexors_dumped.snap.rs:221:21
    |
221 |                     ExtMuxIndepMultiplexorsMuxAIndex::M1(ExtMuxIndepMultiplexorsMuxAM1 {
    |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    |                     |
    |                     use of undeclared type `ExtMuxIndepMultiplexorsMuxAIndex`
    |                     help: an enum with a similar name exists: `ExtMuxIndepMultiplexorsMuxBIndex`

error[E0433]: failed to resolve: use of undeclared type `ExtMuxIndepMultiplexorsMuxAIndex`
   --> tests-snapshots/dbc-cantools/issue_184_extended_mux_independent_multiplexors_dumped.snap.rs:228:21
    |
228 |                     ExtMuxIndepMultiplexorsMuxAIndex::M2(ExtMuxIndepMultiplexorsMuxAM2 {
    |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    |                     |
    |                     use of undeclared type `ExtMuxIndepMultiplexorsMuxAIndex`
    |                     help: an enum with a similar name exists: `ExtMuxIndepMultiplexorsMuxBIndex`

error[E0277]: the trait bound `u16: From<i8>` is not satisfied
   --> tests-snapshots/dbc-cantools/issue_184_extended_mux_independent_multiplexors_dumped.snap.rs:236:46
    |
236 |                     multiplexor: multiplexor.into(),
    |                                              ^^^^ the trait `From<i8>` is not implemented for `u16`
    |
    = help: the following other types implement trait `From<T>`:
              `u16` implements `From<Char>`
              `u16` implements `From<bool>`
              `u16` implements `From<u8>`
    = note: required for `i8` to implement `Into<u16>`
